--- a/CRUD-RESTAPI/src/main/resources/application.properties
+++ b/CRUD-RESTAPI/src/main/resources/application.properties
@@ -2,6 +2,6 @@ server.port=8088
 spring.datasource.url=jdbc:mysql://localhost:3306/world
 spring.datasource.username=root
 spring.datasource.password=123456
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.properties.hibernate.show_sql=true
